--- a/Makefile.in
+++ b/Makefile.in
@@ -76,10 +76,12 @@ TEST_MODE = @TEST_MODE@
 VERSION = @VERSION@
 AUTOMAKE_OPTIONS = no-dependencies
 
+SUBDIRS = src conf @FILE_MMAGIC@
+
 EXTRA_DIST = README-ja namazu.spec namazu.spec.in File-MMagic 	     ChangeLog.old.1.gz
 
-EXTRA_DIRS = conf doc etc lib lisp filter template tknamazu
-SUBDIRS = src @FILE_MMAGIC@
+
+EXTRA_DIRS = doc etc lib lisp filter template tknamazu
 
 CLEANFILES = namazu.spec 	     filter/gzip.pl filter/compress.pl filter/man.pl filter/rfc.pl 	     filter/bzip2.pl filter/msword.pl filter/supported.pl 	     File-MMagic/Makefile File-MMagic/pm_to_blib 	     conf/mknmz.conf-dist lib/var.pl
 
@@ -379,6 +381,7 @@ install-data-local:
 	    cp -rp $(srcdir)/$$subdir $(pkgdatadir); \
 	    rm -rf $(pkgdatadir)/$$subdir/CVS; \
 	    rm -rf $(pkgdatadir)/$$subdir/*/CVS; \
+	    rm -f $(pkgdatadir)/$$subdir/Makefile*; \
 	done
 	cp ChangeLog COPYING NEWS README README-ja THANKS TODO \
 		$(pkgdatadir)/etc
