--- a/lib/var.pl.in
+++ b/lib/var.pl.in
@@ -1,5 +1,5 @@
-# -*- CPerl -*-
-# $Id: var.pl.in,v 1.6 1999-08-30 07:25:44 satoru Exp $
+# -*- Perl -*-
+# $Id: var.pl.in,v 1.7 1999-08-30 09:19:29 satoru Exp $
 # Copyright (C) 1997-1999 Satoru Takabayashi  All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
 #
@@ -79,7 +79,7 @@ $NMZ{__p}      = "$base.tmp_p";
 $NMZ{__pi}     = "$base.tmp_pi";
 
 
-$OUTPUT_DIR = "";
+$OUTPUT_DIR = undef;
 
 ################################################################
 ##
