--- a/conf/Makefile.am
+++ b/conf/Makefile.am
@@ -1,4 +1,5 @@
 EXTRA_DIST = namazu.conf-dist
 all: mknmz.conf-dist
 mknmz.conf-dist: ../lib/conf.pl
-	@grep -v '^package conf;$$' ../lib/conf.pl > $@
+	@grep -v '^package conf;$$' ../lib/conf.pl | \
+	perl -pe 's/^\$$/\$$conf::/' > $@
